2012-01-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/ds390/ralloc.c,
	  src/hc08/ralloc.c,
	  src/SDCCmem.c,
	  src/SDCCbtree.cc,
	  src/pic16/ralloc.c,
	  src/z80/ralloc.c,
	  src/z80/ralloc2.cc,
	  src/pic14/ralloc.c,
	  src/SDCCsalloc.hpp,
	  src/SDCCralloc.hpp,
	  src/mcs51/ralloc.c,
	  src/mcs51/gen.c,
	  src/SDCCbtree.h:
	  Preparations for enabling better stack handling for all ports.

2012-01-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCC.y,
	  src/SDCCopt.c,
	  src/SDCCbtree.cc:
	  Fix assignment of block numbers.

2012-01-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCopt.c (killDeadCode): fixed bug 2862308
	* support/regression/tests/bug2862308.c: new, added

2012-01-03 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-string-opt-5.c:
	  Fixed bug #3463342.

2012-01-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as6808/m08ext.c,
	* sdas/as6808/as_hc08.vcxproj,
	* sdas/as6808/as_hc08.vcxproj.filters,
	* sdas/as6808/Makefile.in: removed m08ext.c
	* sdas/as6808/m08adr.c,
	* sdas/as6808/m08mch.c, 
	* sdas/as6808/m08pst.c,
	* sdas/as6808/m6808.h,
	* sdas/asxxsrc/asout.c: synced with ASxxxx v5 to fix bug 2894291

2012-01-02 Borut Razem <borut.razem AT gmail.com>

	* sdcc/SDCC.lex: included unistd.h, needed by flex 2.5.4 on
	  NetBSD 5.0.1 sparc64 for read() declaration
	* sdas/linksrc/lkar.h: '\n' replaced by '\012'

2012-01-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/src.vcxproj: increased stack size 32M/64M so it never overflows
	* src/Makefile.in: added flex fast flag -f
	* src/SDCC.lex: removed preprocessor warning and error rules,
	  removed EOL after #... rules

2011-12-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/clean.mk: added z180 and r2k
	* sim/ucsim/cmd.src/cmdlex.l: fixed unused yyunput warning
	* src/hc08/main.c: removed unused BSEG